Added jdbc-template